Fixed 413 Payload too Large error

--- a/front/public/css/file-manager.css
+++ b/front/public/css/file-manager.css
@@ -21,7 +21,15 @@ body {
 	background-color: #DDD;
 	border-bottom: 1px solid #CCC;
 }
-
+#return {
+	float: right;
+	margin-right: 8px;
+	padding-left: 1em;
+	background-repeat: no-repeat;
+	background-position: left;
+	background-image: url('./../open-iconic/svg/action-undo.svg');
+	cursor: pointer;
+}
 #new-file {
 	float: right;
 	margin-right: 8px;
